# odoo-api-connector

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  odoo_client.py  security.py
tests/: test_api.py  test_odoo_client.py
tests/functional/: test_api.py
tests/unit/: test_config.py  test_odoo_client.py  test_security.py
